platform/oss/kyverno/kustomize/deny-no-pods-probes/.kyverno-test/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: bad
spec:
  containers:
    - image: busybox:latest
      name: busybox
