platform/oss/kyverno/kustomize/deny-no-pods-probes/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-no-pod-probes
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - kind: Pod
    policy: deny-no-pod-probes
    resources:
      - bad
    result: fail
    rule: deny-no-pod-probes
  - kind: Pod
    policy: deny-no-pod-probes
    resources:
      - good
    result: pass
    rule: deny-no-pod-probes
